# master-monorepo

./: .envrc  .envrc.ares  .envrc.ci  .envrc.dev  .gitignore  .gitmodules  readme.md  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  missing-feature.md
.github/workflows/: build-run-solver.yaml  ecdk_ci.yaml  integration_ci.yaml  (+3 more)
config/: cfg_1200.json  cfg_1200_random.json  cfg_400_random.json  cfg_600.json  cfg_800.random.json
dashboard/server/: Cargo.toml  config.json
dashboard/server/src/: cli.rs  config.rs  data.rs  filestruct.rs  filestructure.rs  handler.rs  main.rs  model.rs  routing.rs
dashboard/server/src/data/: filestruct.rs  model.rs
dashboard/server/src/data/model/: messages.rs  raw.rs
dashboard/server/src/data/model/processed/: tables.rs
dashboard/server/src/data/model/raw/: batch.rs  experiment.rs  problem.rs  series.rs
dashboard/server/src/ecdk/: proxy.rs
dashboard/server/src/filestruct/: extract.rs  model.rs
dashboard/server/src/filestruct/model/: processed.rs  raw.rs
docs/: data-model.md  design.md  how-does-solver-work.md  resources.md
ecdk/: .envrc  .envrc.ares  .envrc.ci  .envrc.dev  .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt  server_config.json
ecdk/config/: cfg_1200_custom.json  cfg_1200_doubled.json  cfg_1200_doubledrank.json  cfg_1200_random.json  cfg_2.json  cfg_2400.json  cfg_2400_doubled.json  cfg_2400_random.json  cfg_2_doubled.json  cfg_2_random.json  cfg_3600.json  cfg_3600_doubled.json  cfg_3600_random.json  cfg_400.json  cfg_400_custom.json  cfg_400_doubled.json  cfg_400_random.json  cfg_600_custom.json  cfg_800.json  cfg_800.random.json
ecdk/data/instances-mock/test_instances/: test04.txt
ecdk/data/metadata/: instance_metadata_v2.txt
ecdk/data/metadata-mock/: metadata.txt
ecdk/docs/: data-model.md  design.md  manual.md  table-model.md  terms.md  unsolved-cases-declared-as-solvable.md
ecdk/scripts/: ares_install_python.sh  build_n_move_solver.sh  print_python_version.py  run_ares.sh  setup_hyperqueue.sh
ecdk/src/: main.py
ecdk/src/cli/: __init__.py  args.py  cli.py  command.py  validation.py
ecdk/src/command/: __init__.py  analyze.py  compare.py  perfcmp.py  run.py
ecdk/src/context/: __init__.py
ecdk/src/core/: env.py  lazymodule.py  series.py
ecdk/src/data/: file_resolver.py  filter.py  processing.py  stat.py
ecdk/src/ecdk/: __init__.py  main.py
ecdk/src/ecdk/cli/: __init__.py  args.py  cli.py  command.py  validation.py
ecdk/src/ecdk/command/: analyze.py  compare.py  perfcmp.py  run.py  validate.py
ecdk/src/ecdk/context/: __init__.py
ecdk/src/ecdk/core/: conversion.py  env.py  fs.py  scheduler.py  series.py  tools.py  util.py  version.py
ecdk/src/ecdk/data/: constants.py  file_resolver.py  model.py  plot.py  processing.py  stat.py  tools.py
ecdk/src/ecdk/data/db/: __init__.py  proxy.py  raw_data_provider.py
ecdk/src/ecdk/experiment/: __init__.py  model.py  runner.py  solver.py
ecdk/src/ecdk/problem/: __init__.py
ecdk/src/experiment/: runner.py  solver.py
ecdk/tests/: test_core_fs.py
scripts/: download_jssp_data.py  montecarlo.py  playground.sh  print_python_version.py  run_ares.sh
solver/: Cargo.toml
solver/src/: cli.rs  config.rs  logging.rs  main.rs  parse.rs  problem.rs  solver.rs  stats.rs  util.rs
solver/src/problem/: crossover.rs  fitness.rs  individual.rs  parse.rs  population.rs  probe.rs  replacement.rs
solver/src/problem/crossover/: goncalves2005.rs
solver/src/solver/: description.rs  registry.rs  run_config.rs
solver/src/stats/: telemetry.rs
src/: cli.py  config.py  jssp.py  main.py  model.py  runner.py  solver.py
(+48 files in other folders)
